--- a/.github/workflows/sample2.yml
+++ b/.github/workflows/sample2.yml
@@ -12,6 +12,8 @@ jobs:
           steps:
           - name: Check out code
             uses: actions/checkout@v2
+            with:
+                token: ${{ secrets.GITHUB_TOKEN }}
             
           - name: Set up Git
             run: |
