--- a/.github/workflows/sample2.yml
+++ b/.github/workflows/sample2.yml
@@ -11,7 +11,7 @@ jobs:
         update-version:
           runs-on: ubuntu-latest
           permissions:
-            contents: read
+            contents: write
           steps:
           - name: Check out code
             uses: actions/checkout@v2
