--- a/.github/workflows/sample2.yml
+++ b/.github/workflows/sample2.yml
@@ -29,7 +29,8 @@ jobs:
               
               # Get the latest tag (version)
               LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
-              
+              echo "Current version-1: $LATEST_TAG"
+
               # If no tags found, start with 0.0.0
               if [ -z "$LATEST_TAG" ]; then
                 LATEST_TAG="0.0.0"
