--- a/.github/workflows/sample2.yml
+++ b/.github/workflows/sample2.yml
@@ -55,7 +55,7 @@ jobs:
                 PATCH=$((PATCH+1))
               fi
               
-              NEW_TAG=v"$MAJOR.$MINOR.$PATCH"
+              NEW_TAG="$MAJOR.$MINOR.$PATCH"
               echo "New version: $NEW_TAG"
               
               # Tag the new version
