--- a/.github/workflows/sample2.yml
+++ b/.github/workflows/sample2.yml
@@ -22,13 +22,13 @@ jobs:
               git config --global user.name 'GitHub Actions'
               git config --global user.email 'mailto:actions@github.com'
       
-              - name: Read Current Version from GitHub tags
-              id: read-version
-              run: |
-                # Get the latest tag from GitHub repository
-                LATEST_TAG=$(git describe --tags --abbrev=0)
-                echo "::set-output name=version::$LATEST_TAG"
-            
+          - name: Read Current Version from GitHub tags
+            id: read-version
+            run: |
+              # Get the latest tag from GitHub repository
+              LATEST_TAG=$(git describe --tags --abbrev=0)
+              echo "::set-output name=version::$LATEST_TAG"
+        
           - name: Determine semantic version
             id: determine-version
             run: |
@@ -85,7 +85,7 @@ jobs:
               echo "$NEW_VERSION" > VERSION
               echo "::set-output name=new_version::$NEW_VERSION"
           
-          
+              echo "New version-2: $NEW_VERSION"
           
           ##################
           # - name: Parse commit messages and update version
