--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -11,41 +11,38 @@ env:
   AWS_REGION: us-west-2
 
 jobs:
-  build:
-    name: Deployment
-    runs-on: ubuntu-latest
-
-    steps:
+   build:
+      name: Deployment
+      runs-on: ubuntu-latest
+      permissions:
+        contents: write
+      steps:
       - name: Check out code
         uses: actions/checkout@v2
-      
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-
-      - name: Read Current Version from ECR repo images
+        
+        
+      - name: Set up Git
+        run: |
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'mailto:actions@github.com'
+  
+      - name: Read Current Version from GitHub tags
         id: read-version
         run: |
-          # Get the latest image tag from the ECR repository
-          VERSION=$(aws ecr describe-images --repository-name $ECR_REPOSITORY --region $AWS_REGION --query 'sort_by(imageDetails,& imagePushedAt)[-1].imageTags[0]' --output text)
-          echo "::set-output name=version::$VERSION"
-        env:
-          AWS_REGION: ${{ env.AWS_REGION }}
-          ECR_REPOSITORY: ${{ env.ECR_REPOSITORY }}
+          # Fetch all tags
+          git fetch --depth=1 origin +refs/tags/*:refs/tags/*
+        
+          # Get the latest tag from GitHub repository
+          LATEST_TAG=$(git describe --tags $(git rev-list --tags --max-count=1))
+          echo "::set-output name=version::${LATEST_TAG}"
+          echo "Current version-1: ${LATEST_TAG}"
       
       - name: Determine semantic version
         id: determine-version
         run: |
           # Extract commit message from the latest commit
           COMMIT_MESSAGE=$(git log -1 --pretty=%B)
-
+      
           # Determine the version type based on the commit message
           if echo "$COMMIT_MESSAGE" | grep -q 'BREAKING CHANGE'; then
             echo "::set-output name=version::major"
@@ -54,7 +51,6 @@ jobs:
           else
             echo "::set-output name=version::patch"
           fi
-
       - name: Determine version update
         id: determine-update
         run: |
@@ -65,20 +61,20 @@ jobs:
             echo "::set-output name=update::minor"
           else
             echo "::set-output name=update::patch"
-          fi
+          fi  
 
       - name: Update Version
         id: update-version
         run: |
           CURRENT_VERSION=$(echo ${{ steps.read-version.outputs.version }})
           VERSION_TYPE=$(echo ${{ steps.determine-version.outputs.version }})
-
+        
           # Parse the version numbers
-          IFS='.' read -r -a VERSION_ARRAY <<< "$CURRENT_VERSION"
+          IFS='.' read -r -a VERSION_ARRAY <<< "${CURRENT_VERSION#v}" # Remove 'v' from the beginning
           MAJOR=${VERSION_ARRAY[0]}
           MINOR=${VERSION_ARRAY[1]}
           PATCH=${VERSION_ARRAY[2]}
-
+        
           # Update version numbers based on the release type
           if [ "$VERSION_TYPE" = "major" ]; then
             MAJOR=$((MAJOR + 1))
@@ -90,20 +86,27 @@ jobs:
           else
             PATCH=$((PATCH + 1))
           fi
-
+        
           # Generate the new version
-          NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
+          NEW_VERSION="v${MAJOR}.${MINOR}.${PATCH}" # Add 'v' to the beginning
           echo "$NEW_VERSION" > VERSION
           echo "::set-output name=new_version::$NEW_VERSION"
+        
+          echo "New version-2: $NEW_VERSION"
+
+      - name: Tag and Push New Version
+        run: |
+            NEW_TAG=$(cat VERSION)
+            git tag $NEW_TAG
+            git push origin $NEW_TAG
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
-          VERSION=$(echo ${{ steps.update-version.outputs.new_version }})
-          UPDATE=$(echo ${{ steps.determine-update.outputs.update }})
-
-          IMAGE_TAG="${VERSION}"
+          IMAGE_TAG=$(cat VERSION)
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Application/Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
     
@@ -136,9 +139,9 @@ jobs:
 
       - name: Deploy to EKS       
         run: |
-          VERSION=$(echo ${{ steps.update-version.outputs.new_version }})
-          UPDATE=$(echo ${{ steps.determine-update.outputs.update }})
+          # VERSION=$(echo ${{ steps.update-version.outputs.new_version }})
+          # UPDATE=$(echo ${{ steps.determine-update.outputs.update }})
 
-          IMAGE_TAG="${VERSION}"
+          IMAGE_TAG=$(cat VERSION)
           echo "new tag is : $IMAGE_TAG"
           helm upgrade --install nodeapp-dev helm/chart/ -n dev --create-namespace --set image.tag=$IMAGE_TAG
