--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -108,6 +108,9 @@ jobs:
         run: |
           IMAGE_TAG=$(cat VERSION)
           echo "the new tag is : $IMAGE_TAG"
+
+          echo "ECR_REGISTRY: $ECR_REGISTRY"
+          echo "ECR_REPOSITORY: $ECR_REPOSITORY"
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Application/Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
     
