--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,9 +39,11 @@ stages:
         cliProjectKey: 'project-1_project-1_AY6jlnqo7N3U2fXEsoOm'
         cliSources: '.'
 
-    - task: SonarQubeAnalyze@5
+    - task: SonarQubePrepare@5
       inputs:
-        jdkversion: 'JAVA_HOME_11_X64'
+        SonarQube: 'sonarqube'
+        scannerMode: 'CLI'
+        configMode: 'file'
 
     - task: SonarQubePublish@5
       inputs:
