--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,11 +39,9 @@ stages:
         cliProjectKey: 'project-1_project-1_AY6jlnqo7N3U2fXEsoOm'
         cliSources: '.'
 
-    - task: SonarQubePrepare@5
+    - task: SonarQubeAnalyze@5
       inputs:
-        SonarQube: 'sonarqube'
-        scannerMode: 'CLI'
-        configMode: 'file'
+        jdkversion: 'JAVA_HOME'
 
     - task: SonarQubePublish@5
       inputs:
