Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,8 +40,8 @@ stages:
         cliSources: '.'
 
     - task: SonarQubeAnalyze@5
-      inputs:
-        jdkversion: 'JAVA_HOME'
+      # inputs:
+      #   jdkversion: 'JAVA_HOME'
 
     - task: SonarQubePublish@5
       inputs:
