--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,16 +27,18 @@ stages:
   - job: Build
     displayName: Build
     pool:
-      name: Default
-      demands: myCustomCapability
+      vmImage: ubuntu-latest
+      # name: Default
+      # demands: myCustomCapability
       # - agent.name -equals SonarQube
     steps:
     - task: SonarQubePrepare@5
       inputs:
-        SonarQube: 'sonarqube'
+        SonarQube: 'soanrqube2'
         scannerMode: 'CLI'
         configMode: 'manual'
         cliProjectKey: 'project-1_project-1_AY6jlnqo7N3U2fXEsoOm'
+        cliProjectName: 'project-1'
         cliSources: '.'
 
     - task: SonarQubeAnalyze@5
