--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,15 +32,15 @@ stages:
       # demands: myCustomCapability
       # - agent.name -equals SonarQube
     steps:
-    - task: SonarQubePrepare@5
-      inputs:
-        SonarQube: 'soanrqube2'
-        scannerMode: 'CLI'
-        configMode: 'manual'
-        cliProjectKey: 'project-1_project-1_AY6jlnqo7N3U2fXEsoOm'
-        cliProjectName: 'project-1'
-        cliSources: '.'
-        extraProperties: -X
+    # - task: SonarQubePrepare@5
+    #   inputs:
+    #     SonarQube: 'soanrqube2'
+    #     scannerMode: 'CLI'
+    #     configMode: 'manual'
+    #     cliProjectKey: 'project-1_project-1_AY6jlnqo7N3U2fXEsoOm'
+    #     cliProjectName: 'project-1'
+    #     cliSources: '.'
+    #     extraProperties: -X
 
     - task: SonarQubeAnalyze@5
       # inputs:
