--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,13 +45,13 @@ stages:
       inputs:
         targetType: 'inline'
         script: '/home/rinshad/sonar-scanner/bin/sonar-scanner -Dsonar.projectKey=project-1_project-1_AY6jlnqo7N3U2fXEsoOm -Dsonar.sources=$(Build.SourcesDirectory)/Application/ -Dsonar.host.url=http://20.127.168.190:9000 -Dsonar.token=sqp_accb5956ce919e4139e9cd4543a7fc035330e94c'
-    - task: SonarQubeAnalyze@5
-      # inputs:
-      #   jdkversion: 'JAVA_HOME'
+    # - task: SonarQubeAnalyze@5
+    #   # inputs:
+    #   #   jdkversion: 'JAVA_HOME'
 
-    - task: SonarQubePublish@5
-      inputs:
-        pollingTimeoutSec: '300'
+    # - task: SonarQubePublish@5
+    #   inputs:
+    #     pollingTimeoutSec: '300'
 
     - task: Docker@2
       displayName: Build and push an image to container registry
