--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,9 +49,9 @@ stages:
     #   # inputs:
     #   #   jdkversion: 'JAVA_HOME'
 
-    # - task: SonarQubePublish@5
-    #   inputs:
-    #     pollingTimeoutSec: '300'
+    - task: SonarQubePublish@5
+      inputs:
+        pollingTimeoutSec: '300'
 
     - task: Docker@2
       displayName: Build and push an image to container registry
