Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,7 +45,7 @@ stages:
       inputs:
         projectName: '1-projecr'
         scanPath: '$(Build.SourcesDirectory)'
-        format: 'HTML'
+        format: 'HTML, JSON'
         uploadReports: true
     - task: Bash@3
       inputs:
