--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,6 +46,12 @@ stages:
         projectName: '1-projecr'
         scanPath: '$(Build.SourcesDirectory)/Application'
         format: 'HTML, JSON'
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'OWASP Report'
+        publishLocation: 'FilePath'
+        TargetPath: '/home/rinshad/myagent/_work/1/TestResults/dependency-check/*'
         uploadReports: true
     - task: Bash@3
       inputs:
