--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ stages:
         format: 'HTML, JSON'
     - task: PublishBuildArtifacts@1
       inputs:
-        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)/home/rinshad/myagent/_work/1/TestResults/dependency-check/'
         ArtifactName: 'OWASP Report'
         publishLocation: 'Container'
     - task: Bash@3
